--- a/webpages/index.html
+++ b/webpages/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="zh">
 <head>
-    <meta http-equiv="content-type" content="text/html";charset="utf-8">
+    <meta charset="utf-8" name="author" content="阮立坤&苏年祥">
     <meta name="viewport" content="width=device-width, initial-scale=1,maximum-scale=1,user-scalable=no">
     <title>魔幻的整活界面</title>
     <link rel="stylesheet" href="index.css">
