--- a/webpages/index.html
+++ b/webpages/index.html
@@ -52,10 +52,10 @@
 
         <div class="form-box-2 hidden">
             <div class="first">
-                <button id="我的包裹">我的包裹</button>
+                <button id="收包裹">收包裹</button>
             </div>
             <div class="second">
-                <button id="寄出包裹">寄出包裹</button>
+                <button id="寄包裹">寄包裹</button>
             </div>
             <div class="third">
                 <button id="快递查询">快递查询</button>
@@ -72,16 +72,16 @@
         </div>
 
         <div class="box box-1 hidden">
-            <h2>我的包裹</h2>
+            <h2>收包裹</h2>
             <form id="receiption">
                 <input type="text" placeholder="订单编号" id="uuid"><br>
             </form>
-            <button>确认收货</button>
+            <button id="确认收货">确认收货</button>
             <ul id="RcvPkg"></ul>
         </div>
 
         <div class="box box-2 hidden">
-            <h2>寄出包裹</h2>
+            <h2>寄包裹</h2>
             <form id="send">
                 <input type="text" placeholder="收件人用户名" id="send_rName"><br>
                 <input type="text" placeholder="包裹描述" id="send_describe"><br>
@@ -89,7 +89,7 @@
                 <input type="range" placeholder="包裹类别" min="2" step="3" max="8" id="send_pkgType"> <br>
                 图书/普通快递/易碎品<br>
             </form>
-            <button>确认发货</button>
+            <button id="确认发货">确认发货</button>
 
             <h2>已经寄出的包裹</h2>
             <ul id="SentPkg"></ul>
@@ -100,7 +100,7 @@
             <form id="inquirePkg">
                 <input type="text" placeholder="运单号" id="inq_uuid"><br>
             </form>
-            <button>确认查询</button>
+            <button id="查询">查询</button>
             <ul id="InqPkg"></ul>
         </div>
 
@@ -112,7 +112,7 @@
             <form id="charge">
                 <input type="text" placeholder="输入充值金额" id="charge_amount"><br>
             </form>
-            <button>确认充值</button>
+            <button id="确认充值">确认充值</button>
 
         </div>
         <div class="box box-5 hidden">
@@ -125,162 +125,12 @@
                 <input type="password" placeholder="新的密码" id="nPwd"><br>
                 <input type="password" placeholder="确认密码" id="nPwd_rpt"><br>
             </form>
-            <button>确认修改</button>
+            <button id="确认修改">确认修改</button>
         </div>
     </div>
 
-    <script type="text/javascript">
-        $("#regButton").on("click", function () {
-            var UsrName = $("#register input:eq(0)").val();
-            var RealName = $("#register input:eq(1)").val();
-            var pwd = $("#register input:eq(2)").val();
-            var tel = $("#register input:eq(3)").val();
-            var address = $("#register input:eq(4)").val();
-            $.ajax({
-                //几个参数需要注意一下
-                type: "POST",//方法类型
-                url: "api/regist",//url
-                //dataType: "text",//预期服务器返回的数据类型[xml,html,script,json,jsonp,text]
-                data: {
-                    "usrName": UsrName,
-                    "password": pwd,
-                    "realName": RealName,
-                    "tel": tel,
-                    "address": address,
-                },
-                success: function (response, status, xhr) {
-                    console.log(response);	//服务器返回的信息
-                    console.log(status);	//服务器返回的信息
-                    console.log(xhr.status);	//状态码,   要看其他的直接 输出 xhr 就行
-                    console.log(xhr.getAllResponseHeaders()); //响应头部
-                    alert("注册成功！");
-                },
-                error: function (status, errorThrown) {
-                    console.log(status);
-                    alert("注册失败，用户名已被占用！" + errorThrown);
-                }
-            });
-            return false;
-        }),
+    <script type="text/javascript" src="script.js"></script>
 
-            $("#loginButton").on("click", function () {
-                var UsrName = $("#login input:eq(0)").val();
-                var pwd = $("#login input:eq(1)").val();
-
-                $.ajax({
-                    //几个参数需要注意一下
-                    type: "POST",//方法类型
-                    url: "api/login",//url
-                    //dataType: "text",//预期服务器返回的数据类型[xml,html,script,json,jsonp,text]
-                    data: {
-                        "usrName": UsrName,
-                        "password": pwd
-                    },
-                    success: function (response, status, xhr) {
-                        console.log(response);	//服务器返回的信息
-                        console.log(status);	//服务器返回的信息
-                        console.log(xhr.status);	//状态码,   要看其他的直接 输出 xhr 就行
-                        console.log(xhr.getAllResponseHeaders()); //响应头部
-                        alert("登录成功！");
-                    },
-                    error: function (status, errorThrown) {
-                        console.log(status);
-                        alert("请检查用户名或密码！" + errorThrown);
-                    }
-                });
-                return false;
-            }),
-
-            $("#我的包裹").on("click", function () {
-                var UsrName = $("#login input:eq(0)").val();
-                var pwd = $("#login input:eq(1)").val();
-                $.ajax({
-                    url: "/api/checkRcv",
-                    type: "POST",
-                    data: {
-                        "usrName": UsrName,
-                        "password": pwd
-                    },
-                    dataType: "json",
-                    success: function (data) {
-                        /*这个方法里是ajax发送请求成功之后执行的代码*/
-                        console.log(data.data);
-                        showPackageData(data.data, "#RcvPkg");//数据展示
-                    },
-                    error: function (msg) {
-                        alert("ajax连接异常：" + msg);
-                    }
-                });
-            }),
-
-            $("#寄出包裹").on("click", function () {
-                var UsrName = $("#login input:eq(0)").val();
-                var pwd = $("#login input:eq(1)").val();
-                $.ajax({
-                    url: "/api/checkSent",
-                    type: "POST",
-                    data: {
-                        "usrName": UsrName,
-                        "password": pwd
-                    },
-                    dataType: "json",
-                    success: function (data) {
-                        /*这个方法里是ajax发送请求成功之后执行的代码*/
-                        console.log(data.data);
-                        showPackageData(data.data, "#SentPkg");//数据展示
-                    },
-                    error: function (msg) {
-                        alert("ajax连接异常：" + msg);
-                    }
-                });
-            });
-
-
-        function showPackageData(data, str_where) {
-            for (let i = 0; i < data.length; i++) {
-                let strEnd = "";
-                strEnd += "<h1>" + (i + 1).toString() + "</h1>"
-                    + "<p class='firstP'><span class='title'>物流单号：</span> <span>"
-                    + data[i].UUID
-                    + "</span></p> <div class='row'>"
-                    + "<p class='title'>发件人：</p><p>"
-                    + data[i].from
-                    + "</p><p class='title'>收件人：</p><p>"
-                    + data[i].to
-                    + "</p><p class='title'>发件地址：</p><p>"
-                    + data[i].fAddr
-                    + "</p><p class='title'>收件地址：</p><p>"
-                    + data[i].tAddr
-                    + "</p><p class='title'>物品类别（2:书, 5:普通, 8:易碎）：</p><p>"
-                    + data[i].type
-                    + "</p><p class='title'>物品描述：</p><p>"
-                    + data[i].description
-                    + "</p><p class='title'>签收状态（0为未签收，1为已签收）：</p><p>"
-                    + data[i].status
-                    + "</p><p class='title'>发件时间：</p><p>"
-                    + data[i].sendTime
-                    + "</p><p class='title'>收件时间：</p><p>"
-                    + data[i].rcvTime
-                    + "</p> </div> ";
-                //追加到div中
-            }
-            if (i != data.length - 1) {
-                strEnd += "<hr class='hr'/>";
-            }
-            $(str_where).append(strEnd);
-        }
-
-        function getQueryVariable(variable) {
-            var query = window.location.search.substring(1);
-            var vars = query.split("&");
-            for (var i = 0; i < vars.length; i++) {
-                var pair = vars[i].split("=");
-                if (pair[0] == variable) { return pair[1]; }
-            }
-            return (false);
-        }
-
-    </script>
 </body>
 
 </html>
